k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: fullstack-app
  labels:
    app: backend
spec:
  selector:
    app: backend
  ports:
    - port: 5001
      targetPort: 5001
      protocol: TCP
  type: ClusterIP
